--- a/react-admin/src/index.css
+++ b/react-admin/src/index.css
@@ -5,8 +5,9 @@ body,
 #root,
 .app,
 .content {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: clip;
   font-family: "Source Sans 3", sans-serif;
 }
 
