--- a/react-admin/src/index.css
+++ b/react-admin/src/index.css
@@ -5,15 +5,16 @@ body,
 #root,
 .app,
 .content {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
-  overflow: clip;
+  overflow: auto;
   font-family: "Source Sans 3", sans-serif;
 }
 
 .app {
   display: flex;
   position: relative;
+  height: 100%;
 }
 
 .content-full {
